--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dwa4jnsrl",
+    "ApiKey": "764252215534913",
+    "ApiSecret": "TlBuiK7WCgeanUXa5a3oswQJWCg"
+  }
 }
